@@ -1,153 +1,0 @@
-.tx-standorte-pi1 .list {
-	float:left;
-	clear:both;
-	margin-bottom: 8px;
-}
-
-.tx-standorte-pi1 h3 {
-	margin: 8px 0;
-}
-.tx-standorte-pi1 .list .bibhead  {
-	float:left;
-	width: 550px;
-	background-color:#6E7FA0;
-	-webkit-border-radius: 7px;
-	-moz-border-radius: 7px;
-	border-radius: 7px;
-
-	cursor: pointer;
-}
-
-.tx-standorte-pi1 .list h2{
-	float:left;
-	width: 503px;
-}
-
-.tx-standorte-pi1 .list .bibhead .sigel  {
-	float:right;
-	color: white;
-	padding-right: 10px;
-	width:auto;
-	margin-top: 8px;
-}
-
-.tx-standorte-pi1 .list .bibhead h2 a{
-	color: white!important;
-	border-bottom: 0!important;
-	margin-top: 8px;
-	float: left;
-	margin-left: 2px;
-	padding-left: 21px;
-}
-
-.tx-standorte-pi1 .list .bibhead h2 a.closed{
-	background-image: url(/typo3conf/ext/standorte/Resources/Public/img/closed.gif);
-	background-repeat: no-repeat;
-	background-position: center left;
-}
-
-.tx-standorte-pi1 .list .bibhead h2 a.opened{
-	background-image: url(/typo3conf/ext/standorte/Resources/Public/img/opened.gif);
-	background-repeat: no-repeat;
-	background-position: center left;
-}
-
-.tx-standorte-pi1 .list dl {
-	margin-bottom:2px;
-	width:auto;
-	border-right: 1px solid #EEEEEE;
-	border-bottom: 1px solid #EEEEEE;
-	border-left: 1px solid #EEEEEE;
-	clear:both;
-	float:left;
-}
-
-.tx-standorte-pi1 .list dd {
-	border-top: 1px solid #EEEEEE;
-	margin-left:160px;
-	width:380px;
-	padding: 3px;
-	border-left: 1px solid #EEEEEE;
-}
-
-.tx-standorte-pi1 .list dt {
-	border-top: 1px solid #EEEEEE;
-	float:left;
-	width:156px;
-	padding: 3px;
-}
-
-.tx-standorte-pi1 .list .wochentag {
-	width:136px;
-	float:left;
-}
-
-.tx-standorte-pi1 .list .open {
-	margin-left:3px;
-	color: green;
-}
-
-.tx-standorte-pi1 .list .closed {
-	color: red;
-	margin-left:3px;
-}
-
-.tx-standorte-pi1 .list .karte {
-	display:none;
-	margin-left:0;
-	float:left;
-	width:380px;
-	height:300px;
-}
-
-.tx-standorte-pi1 .status {
-	margin-bottom: 4px;
-}
-
-.standorte-infobox {
-	font-size: 80%;
-}
-
-/* tables */
-.tx-standorte-pi1 table#daten {
-	font-family:arial;
-	margin:10px 0pt 15px;
-	font-size: 8pt;
-	width: 100%;
-	text-align: left;
-}
-.tx-standorte-pi1 table#daten thead tr th, table.tablesorter tfoot tr th {
-	border: 1px solid #FFF;
-	font-size: 8pt;
-	padding: 4px;
-}
-.tx-standorte-pi1 table thead>tr>th {
-	width: 60px;
-}
-
-.tx-standorte-pi1 table#daten thead tr .header {
-	background-image: url(/typo3conf/ext/standorte/Resources/Public/img/bg.gif);
-	background-repeat: no-repeat;
-	background-position: center right;
-	cursor: pointer;
-}
-.tx-standorte-pi1 table#daten tbody td {
-	padding: 4px;
-	vertical-align: top;
-}
-.tx-standorte-pi1 table#daten tbody tr.odd td {
-}
-.tx-standorte-pi1 table#daten thead tr .headerSortUp {
-	background-image: url(../img/asc.gif);
-	color: black;
-}
-.tx-standorte-pi1 table#daten thead tr .headerSortDown {
-	background-image: url(../img/desc.gif);
-	color: black;
-}
-.tx-standorte-pi1 table#daten thead tr .headerSortDown, table.tablesorter thead tr .headerSortUp {
-	color: black;
-}
-.tx-standorte-pi1 table#daten tbody tr:hover{
-	background-color: #dadada;
-}
