@@ -69,7 +69,6 @@ CREATE TABLE tx_standorte_domain_model_bibliothek (
 	katalogteilweise int(11) DEFAULT '0',
 	institutskatalog tinytext,
 	extlink tinytext,
-	sorttitel varchar(255) DEFAULT '' NOT NULL,
 
 	PRIMARY KEY (uid),
 	KEY parent (pid)
