@@ -1,3 +1,6 @@
+2012-03-12 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
+	* Titel fuer die Sortierung entfernt und Sortierung nach Sigeln vorgenommen (WWW-1144)
+
 2012-03-05 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* Titel der Detailseiten geaendert (WWW-1103)
 	* Linkbezeichnung geaendert (WWW-1102)
